fix for image overflow

--- a/src/main/resources/static/css/tweet.css
+++ b/src/main/resources/static/css/tweet.css
@@ -12,3 +12,6 @@
 .tags-container .badge:nth-child(odd) {
 	background: #f8f9fa;
 }
+img {
+	width: 100%;
+}
